syntax = "proto3";

package pb;


// 所有字符串默认都是UTF-8编码
message Request{
    int64   rid         = 1; // 请求的唯一标识，用户需要对此字段唯一性负责
    int32   code        = 2; // 消息码
    bytes   payload     = 3; // 请求的数据内容，是`protobuffer`格式，内容根据`code`而定
    bool    debug       = 4; // 调试模式
    int32   splitSize   = 5; // 如果消息是可切分消息，那么每个切分的子消息，最大的数量单元,如果未指定，则会使用默认，因消息而异
}

message Response{
    int64   rid         = 1; // 消息ID，如果消息被切分成为多个消息
    int32   errCode     = 2; // 错误码
    int32   code        = 3; // 消息码
    string  message     = 4; // 错误描述
    bool    splited     = 5; // 消息被切分成多个消息
    int32   splitIndex  = 6; // 消息在连续消息的序号
    bytes   payload     = 7; // 返回的数据
}

service KfxService{
    // 程序请求的主要入口
    rpc DoWorks(stream Request) returns (stream Response){}
}
